[package]
name = "tokio-minihttp-hello-world"
version = "0.1.0"
authors = ["Kevin Chen <kevinmichaelchen@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.6.0"
futures = "0.1.25"
tokio-core = "0.1.17"
tokio-io = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-minihttp = { git = "https://github.com/tokio-rs/tokio-minihttp" }
